--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h3>CONTACT</h3>
                 <h4>Feel free to say Hi!</h4>
                 <ul>
-                    <li><a href="./pdf/Resume.pdf">Resume</a></li>
+                    <li><a href="./img/resume.pdf">Resume</a></li>
                     <li><a href="about.html">About me</a></li>
                     <li>Email: <a class="email" href="mailto:nfaye0803@gmail.com">nfaye0803@gmail.com</a></li>
                 </ul>
